--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://lwh2024.us.kg/forum/forumlist/1/">
-    <title>重定向中...</title>
+    
+    <title>洪衫仔的主頁</title>
 </head>
 <body>
     <p>如果沒有自動重定向，請點擊 <a href="https://lwh2024.us.kg/forum/forumlist/1/">這裡</a></p>
