--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>洪衫仔的主頁</title>
 </head>
 <body>
-    <p>如果沒有自動重定向，請點擊 <a href="https://lwh2024.us.kg/forum/forumlist/1/">這裡</a></p>
+    <p>請點擊 <a href="https://lwh2024.us.kg/forum/forumlist/1/">這裡</a></p>
 </body>
 </html>
