--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>請點擊 <a href="https://lwh2024.us.kg/forum/forumlist/1/">這裡</a></p>
+    <a href="weixin://dl/officialaccounts?scene=109&need_open_webview=1&url=https://lwh2024.us.kg/forum/forumlist/1/">點擊這裡打開 B 網站</a>
 </body>
 </html>
