--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <p>請點擊 <a href="https://lwh2024.us.kg/forum/forumlist/1/">這裡</a></p>
     <a href="weixin://dl/officialaccounts?scene=109&need_open_webview=1&url=https://lwh2024.us.kg/forum/forumlist/1/">點擊這裡打開 B 網站</a>
+    <p>請長按以下鏈接，然後選擇在瀏覽器中打開：</p>
+    <a href="https://lwh2024.us.kg/forum/forumlist/1/">https://lwh2024.us.kg/forum/forumlist/1/</a>
 </body>
 </html>
