--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
-    
-    <title>洪衫仔的主頁</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>打開鏈接</title>
 </head>
 <body>
-    <p>請點擊 <a href="https://lwh2024.us.kg/forum/forumlist/1/">這裡</a></p>
-    <a href="weixin://dl/officialaccounts?scene=109&need_open_webview=1&url=https://lwh2024.us.kg/forum/forumlist/1/">點擊這裡打開 B 網站</a>
-    <p>請長按以下鏈接，然後選擇在瀏覽器中打開：</p>
-    <a href="https://lwh2024.us.kg/forum/forumlist/1/">https://lwh2024.us.kg/forum/forumlist/1/</a>
+    <h1>請使用默認瀏覽器打開鏈接</h1>
+    <p>請手動複製以下鏈接，然後在您的瀏覽器中打開：</p>
+    <pre>https://lwh2024.us.kg/forum/forumlist/1/</pre>
+    <p>您可以長按鏈接，然後選擇「複製」來複製鏈接。</p>
 </body>
 </html>
