--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>打開鏈接</title>
+    <title>洪衫仔的GitHub主頁</title>
 </head>
 <body>
     <h1>請使用默認瀏覽器打開鏈接</h1>
-    <p>請手動複製以下鏈接，然後在您的瀏覽器中打開：</p>
-    <pre>https://lwh2024.us.kg/forum/forumlist/1/</pre>
-    <p>您可以長按鏈接，然後選擇「複製」來複製鏈接。</p>
+    <h1>點擊左上角的三點，然后選擇在瀏覽器中開啟</h1>
+    
+    <pre><a href="https://lwh2024.us.kg/forum/forumlist/1/">
+        https://lwh2024.us.kg/forum/forumlist/1/
+    </a></pre>
+    
 </body>
 </html>
