--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>請使用默認瀏覽器打開鏈接</h1>
-    <h1>點擊左上角的三點，然后選擇在瀏覽器中開啟</h1>
+    <h1>點擊右上角的三點，然后選擇在瀏覽器中開啟</h1>
     
     <pre><a href="https://lwh2024.us.kg/forum/forumlist/1/">
         https://lwh2024.us.kg/forum/forumlist/1/
