--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <h1>請使用默認瀏覽器打開鏈接</h1>
-    <h1>點擊右上角的三點，然后選擇在瀏覽器中開啟</h1>
+    <h1>點擊右上角的三點，選擇“在瀏覽器中開啟”</h1>
     
-    <pre><a href="https://lwh2024.us.kg/forum/forumlist/1/">
-        https://lwh2024.us.kg/forum/forumlist/1/
-    </a></pre>
+    <h2><a href="https://lwh2024.us.kg/forum/forumlist/1/">
+        然后點擊這里就能開啟
+    </a></h2>
     
 </body>
 </html>
