--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>請使用默認瀏覽器打開鏈接</h1>
-    <h1>點擊右上角的三點，選擇“在瀏覽器中開啟”</h1>
+    <h1>手機用戶，點擊右上角的三點，選擇“在瀏覽器中開啟”</h1>
     
     <h2><a href="https://lwh2024.us.kg/forum/forumlist/1/">
         然后點擊這里就能開啟
